ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /firstpath
        pathType: Prefix
        backend:
          service:
            name: node
            port:
              number: 3000
      - path: /secondpath
        pathType: Prefix
        backend:
          service:
            name: node2
            port:
              number: 3000
